commit change email and controllichecked

--- a/src/app/page-user-register/page-user-register.component.html
+++ b/src/app/page-user-register/page-user-register.component.html
@@ -5,7 +5,9 @@
 </div>
 <div class="label-user">
 <p class="text-start">Benvenuto, {{usernameEvent.username}}</p>
+<p class="text-start">Email Utente: {{usernameEvent.email}}</p>
 </div>
+
 
 <div class="button-class">
   <button type="button" class="btn btn-info" (click)="tornaIndietro()">Indietro</button>
