--- a/src/app/page-user-register/page-user-register.component.scss
+++ b/src/app/page-user-register/page-user-register.component.scss
@@ -1,7 +1,7 @@
 .label-user {
     text-align: center;
     margin-top: 14px;
-    font-size: -webkit-xxx-large;
+    font-size: xx-large;
 }
 
 .button-class {
