--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -30,6 +30,9 @@
                       <div *ngIf="!hidePassword">
                      <button class="btn btn-secondary button-eye" (click)="showHidePassword()"><i class="fa fa-eye-slash"></i></button>
                     </div>
+                    <div *ngIf="userNotExist">
+                      <p class="colorMessage">{{errorMessageNotExist}}</p>
+                    </div>
 
             </div>
       
@@ -37,7 +40,7 @@
         </div>
         <div  class="d-flex justify-content-between">
             <button type="button" class="btn btn-warning" (click)="tornaIndietro()">Indietro</button>
-            <button type="submit" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalSuccess" (click)="registraUtente()" [disabled]="myForm.invalid">Conferma</button>
+            <button type="submit" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalSuccess" (click)="loginUser()" [disabled]="myForm.invalid">Conferma</button>
       </div>
     </form>
 </div>
