add routing , rimozione login component e logica con event emitter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
-<div *ngIf="!success && !loginView" >
+<!-- <div *ngIf="!success && !loginView" >
 <register-module (eventUsername)="getObjectUsername($event)" (flgEventModal)="getFlagTrue($event)" (flgEventLogin)="getFlagLoginTrue($event)"></register-module>
 </div>
 
 <div *ngIf="success && !loginView">
 <page-user-register [usernameEvent]="modelUserEvent" (backEvent)="getBackEvent($event)"></page-user-register>
-</div>
+</div> -->
 
-<div *ngIf="loginView">
-   <login-page (flgBack)="getFlgBackEvent($event)" (showUser)="getPageUserEvent($event)" (loginUserEvent)="getObjectUsername($event)"></login-page> 
-</div>
+<router-outlet></router-outlet>
+
 
