--- a/src/app/page-user-register/page-user-register.component.html
+++ b/src/app/page-user-register/page-user-register.component.html
@@ -4,8 +4,8 @@
 <img src="https://icons.iconarchive.com/icons/paomedia/small-n-flat/256/profile-icon.png">
 </div>
 <div class="label-user">
-<p class="text-start">Benvenuto, {{usernameEvent.username}}</p>
-<p class="text-start">Email Utente: {{usernameEvent.email}}</p>
+<p class="text-start">Benvenuto, {{userObject.username}}</p>
+<p class="text-start">Email Utente: {{userObject.email}}</p>
 </div>
 
 
