--- a/src/app/register-module/register-module.component.html
+++ b/src/app/register-module/register-module.component.html
@@ -1,101 +1,4 @@
-<!-- 
-  <div class="d-flex justify-content-center">
-    <h1 class="fs-2">Registrazione Utente</h1>
-    <div class="icon-set">
-      <i class="fa fa-address-card fa-2x"></i>
-    </div>
-     
-      <button class="btn btn-info login-button" (click)="goToLoginPage()">Login</button>
-    
-  </div>
-<body>
-  <div class="main">
-    <div class="signup">
-    <form #myForm="ngForm">
-     
-        
-        <input type="text" class="form-control" placeholder="Nome Utente" [(ngModel)]="dataUser.username"
-          #username="ngModel" name="username" required>
-        <div *ngIf="username.invalid && (username.touched || username.dirty)">
-          <p class="colorMessage">{{errorMessageBlank}}</p>
-        </div>
-      
-      
-        
-        <input type="text" class="form-control" placeholder="Email" [(ngModel)]="dataUser.email" #email="ngModel"
-          name="email" required>
-        <div *ngIf="email.invalid && (email.touched || email.dirty)">
-          <p class="colorMessage">{{errorMessageBlank}}</p>
-        </div>
-        <div *ngIf="flgEmailErrata">
-          <p class="colorMessage">{{errorMessageEmail}}</p>
-        </div>
-      
-      <div class="input-container mb-3">
-       
-        <div>
-          <input [type]="hidePassword ? 'password' : 'text'" class="form-control" placeholder="Password"
-            [(ngModel)]="dataUser.password" #password="ngModel" name="psw" required>
-          <div *ngIf="password.invalid && (password.touched || password.dirty)">
-            <p class="colorMessage">{{errorMessageBlank}}</p>
-          </div>
-          <div *ngIf="flgPasswordErrataInvalid">
-            <p class="colorMessage">{{errorPasswordInvalid}}</p>
-          </div>
-          <div *ngIf="hidePassword">
-            <button class="btn btn-secondary button-eye" (click)="showHidePassword()"><i class="fa fa-eye"></i></button>
-          </div>
-          <div *ngIf="!hidePassword">
-            <button class="btn btn-secondary button-eye" (click)="showHidePassword()"><i
-                class="fa fa-eye-slash"></i></button>
-          </div>
 
-        </div>
-
-      </div>
-      
-       
-        <input [type]="hideRepPassword ? 'password' : 'text'" class="form-control" placeholder="Ripeti Password"
-          [(ngModel)]="dataUser.repPassword" #repPassword="ngModel" name="repPassword" required>
-        <div *ngIf="repPassword.invalid && (repPassword.touched || repPassword.dirty)">
-          <p class="colorMessage">{{errorMessageBlank}}</p>
-        </div>
-        <div *ngIf="flgPasswordErrata">
-          <p class="colorMessage">{{errorPasswordNotEqual}}</p>
-        </div>
-        <div *ngIf="flgPasswordErrataInvalid">
-          <p class="colorMessage">{{errorPasswordInvalid}}</p>
-        </div>
-
-        <div *ngIf="hideRepPassword">
-          <button class="btn btn-secondary button-eye" (click)="showHideRepPassword()"><i
-              class="fa fa-eye"></i></button>
-        </div>
-        <div *ngIf="!hideRepPassword">
-          <button class="btn btn-secondary button-eye" (click)="showHideRepPassword()"><i
-              class="fa fa-eye-slash"></i></button>
-        </div>
-
-      
-
-      <div class="mb-3 form-check">
-
-        <input type="checkbox" class="form-check-input checkbox-class" [(ngModel)]="dataUser.flgChecked"
-          #flgChecked="ngModel" name="flgChecked" required>
-        <label class="form-check-label" for="exampleCheck1">Accetto termini e condizioni</label>
-
-      </div>
-
-      <div class="d-flex justify-content-between">
-        <button type="reset" class="btn btn-warning">Reset</button>
-        <button type="submit" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalSuccess"
-          (click)="registraUtente()" [disabled]="myForm.invalid">Registrati</button>
-      </div>
-
-    </form>
-  </div>
-  </div>
-  </body> -->
 
 <!-- nuovo lay-->
 
@@ -112,44 +15,37 @@
       <input type="checkbox" id="chk" aria-hidden="true">
   
         <div class="signup">
-          <form #myForm="ngForm">
+          <form [formGroup]="registerForm">
             <label for="chk" aria-hidden="true">Registrati</label>
-            <input type="text" name="username" placeholder="user name" [(ngModel)]="dataUser.username" #username="ngModel" required>
-            <div *ngIf="username.invalid && (username.touched || username.dirty)">
-              <p class="colorMessage">{{errorMessageBlank}}</p>
-            </div>
-            <input type="email" name="email" placeholder="email" [(ngModel)]="dataUser.email" #email="ngModel" required>
-            <div *ngIf="email.invalid && (email.touched || email.dirty)">
-              <p class="colorMessage">{{errorMessageBlank}}</p>
-            </div>
-            <div *ngIf="flgEmailErrata">
-              <p class="colorMessage">{{errorMessageEmail}}</p>
-            </div>
-            <input type="password" name="pswd" placeholder="Password"  [(ngModel)]="dataUser.password" #password="ngModel" name="psw" required>
-            <div *ngIf="password.invalid && (password.touched || password.dirty)">
-              <p class="colorMessage">{{errorMessageBlank}}</p>
-            </div>
+            <input type="text" id="user"  name="username" placeholder="username" formControlName="username" >
+       
+            <input type="email" id="email" name="email" placeholder="email" formControlName="email" >
+            <p class='error-login-input' *ngIf="flgEmailErrata">{{errorMessageEmail}}</p>
+            <input id="pw" [type]="hidePassword ? 'password' : 'text'" name="pswd" placeholder="Password" class="password-class" formControlName="password"  name="psw">
+            <span class="eye-class-pw" (click)="showHidePassword()"> <i class="fa fa-eye" [ngClass]="hidePassword ? 'fa fa-eye' : 'fa fa-eye-slash'" aria-hidden="true" ></i></span>
+         
             <div *ngIf="flgPasswordErrataInvalid">
               <p class="colorMessage">{{errorPasswordInvalid}}</p>
             </div>
-            <input type="password" placeholder="Ripeti Password" [(ngModel)]="dataUser.repPassword" #repPassword="ngModel" name="repPassword" required>
+            <input [type]="hideRepPassword ? 'password' : 'text'" placeholder="Ripeti Password" formControlName="repPassword"  >
+            <span class="eye-class-pw" (click)="showHideRepPassword()"> <i class="fa fa-eye" [ngClass]="hideRepPassword ? 'fa fa-eye' : 'fa fa-eye-slash'" aria-hidden="true" ></i></span>
+  
             <div class="d-flex justify-content-center">
-              <input type="checkbox"  class="checkbox-class"  [(ngModel)]="dataUser.flgChecked"
-              
-                  #flgChecked="ngModel" name="flgChecked" required>
+              <input type="checkbox"  class="checkbox-class"  formControlName="flgChecked"
+              >
               <span class="form-check-label" for="exampleCheck1">Accetto termini e condizioni</span>
             </div>
           
-            <button type="submit" (click)="registraUtente()" [disabled]="myForm.invalid">Sign up</button>
+            <button type="submit" [ngClass]="'registerForm.invalid' ? 'disable-button' : ''  " (click)="registraUtente()" [disabled]="registerForm.invalid">Sign up</button>
           </form>
         </div>
   
         <div class="login">
-          <form #myForm="ngForm">
+          <form [formGroup]="loginForm">
             <label for="chk" aria-hidden="true">Login</label>
-            <input type="email" name="email" placeholder="Email" [(ngModel)]="dataUser.email" #email="ngModel" required>
-            <input type="password" name="psw" placeholder="Password" [(ngModel)]="dataUser.password" #password="ngModel"  required>
-            <button [disabled]="myForm.invalid"  (click)="loginUser()">Login</button>
+            <input type="email" name="email" placeholder="Email"  formControlName="email">
+            <input type="password" name="psw" placeholder="Password" formControlName="password" >
+            <button [disabled]="loginForm.invalid"  (click)="loginUser(loginForm.value.email, loginForm.value.password)">Login</button>
           </form>
         </div>
     </div>
